--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,3 +11,30 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
+- rule: Global Description of the procedure
+  steps:
+  - intent: global_description_of_procedure
+  - action: action_procedure_description
+  - intent: goodbye
+  - action: utter_goodbye
+
+- rule: Quering the Documents for Procedure
+  steps:
+  - intent: query_documents
+  - action: action_procedure_documents
+
+- rule: Quering the location for Procedure
+  steps:
+  - intent: query_location
+  - action: action_procedure_delivering_administrations
+
+- rule: Quering the price for Procedure
+  steps:
+  - intent: query_price
+  - action: action_procedure_price
+
+- rule: Quering the Time delay for Procedure
+  steps:
+  - intent: query_delay
+  - action: action_procedure_delay
